<resources>
    <string name="app_name">PwTestApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="success">success</string>
    <string name="sign_up_success">Account created!</string>
    <string name="sign_in_success">Login success!</string>
    <string name="network_error">Please check your internet connection and try again.</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">PW Service\nstarting..</string>
    <string name="password_length">password length must be 3 symbols</string>
    <string name="invalid_password">invalid password</string>
    <string name="user_name">User name</string>
    <string name="e_mail">E-mail</string>
    <string name="repeat_pass">Confirm</string>
    <string name="empty_field">Empty field</string>
    <string name="passwords_check">Passwords do not match</string>
    <string name="incorrect_email">Incorrect email</string>
    <string name="pass">Password</string>
    <string name="create_account">Create account</string>
    <string name="recent_transactions">Recent transactions</string>
    <string name="users_list">Users list</string>
    <string name="logout">Logout</string>
    <string name="user_email_format">E-mail: %s</string>
    <string name="user_id_format">Identifier: %s</string>
    <string name="user_name_format">Your name: %s</string>
    <string name="pw_balance_format">Your balance: %d %s</string>
    <string name="logout_success">You Have successfully Logged Out Of Your Account</string>
    <string name="type_user_name_please">Type user name please..</string>
    <string name="try_again">Try again</string>
    <string name="users_not_found">Users not found</string>
    <string name="transactions_not_found">Transactions not found</string>
    <string name="data_unknown">n/a</string>
    <string name="create_transaction">Create transaction</string>
    <string name="currency">PW</string>
    <string name="recipient">Recipient: %s</string>
    <string name="amount_hint">Amount, PW</string>
    <string name="send_money">Send money</string>
    <string name="default_amount">0</string>
    <string name="wrong_amount_format">Please enter correct amount</string>
    <string name="transaction_success">Transaction successful!</string>
    <string name="create_transaction_button">Send PW</string>
    <string name="no_service_available">No service available</string>
</resources>
