<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rootView">

    <include layout="@layout/layout_toolbar"/>

    <ScrollView
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="@dimen/activity_padding"
                      android:layout_marginEnd="@dimen/activity_padding"
                      android:layout_gravity="center"
                      android:orientation="vertical"
                      android:gravity="center">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/emailEdit"
                    style="@style/AuthEditTextStyle"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"/>

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordEdit"
                    style="@style/AuthEditTextStyle"
                    android:hint="@string/pass"
                    android:inputType="textPassword"/>

            <Button android:id="@+id/signInButton"
                    android:enabled="false"
                    android:text="@string/sign_in"
                    android:padding="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            <Button android:id="@+id/createAccount"
                    android:text="@string/create_account"
                    android:padding="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <include layout="@layout/layout_progressbar"/>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
