<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rootView">

    <include
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_gravity="center"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="@dimen/activity_padding"
                      android:layout_marginEnd="@dimen/activity_padding"
                      android:orientation="vertical"
                      android:gravity="center">

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/userNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/usernameEdit"
                        style="@style/EditStyle"
                        android:hint="@string/user_name"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/emailEdit"
                        style="@style/EditStyle"
                        android:inputType="textEmailAddress"
                        android:hint="@string/e_mail"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/passwordEdit"
                        style="@style/EditStyle"
                        android:hint="@string/pass"
                        android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                    android:id="@+id/repeatPasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/repeatPasswordEdit"
                        style="@style/EditStyle"
                        android:hint="@string/repeat_pass"
                        android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>


            <Button android:id="@+id/signUpButton"
                    android:enabled="false"
                    android:text="@string/sign_up"
                    android:padding="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <ProgressBar
                    android:visibility="gone"
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"/>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>

