<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:id="@+id/rootView"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 tools:ignore="RtlHardcoded">

    <include layout="@layout/layout_toolbar"/>


    <android.support.constraint.ConstraintLayout
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <android.support.v7.widget.CardView
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:contentPaddingBottom="16dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/recipientNameTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recipient"
                        style="@style/AuthEditTextStyle"/>

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/pwAmountTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                            android:id="@+id/pwAmountEditText"
                            style="@style/AuthEditTextStyle"
                            android:inputType="numberDecimal"
                            android:hint="@string/amount_hint"/>

                </android.support.design.widget.TextInputLayout>


                <Button
                        android:enabled="false"
                        android:id="@+id/makeTransactionButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/send_money"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <include layout="@layout/layout_progressbar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>

    </android.support.constraint.ConstraintLayout>


</android.support.design.widget.CoordinatorLayout>
